Updated Index and Added About/Contact

--- a/index.html
+++ b/index.html
@@ -3,12 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.1">
-    <title>349</title>
+    <title>Noah Konarz Blog</title>
 </head>
 <body>
-    <header id="noah" class="cool">
-        <h1>A Day in the Life of Noah Konarz (Monday)</h1>
+    <header>
+        <h1>Noah Konarz</h1>
+        <a href="index.html">Blog</a> <a href="about.html">About</a>  <a href="contact.html">Contact</a> 
     </header>
+</body>
+<body>
+    <header>
+        <h1>My Steam Gaming in the last Two Weeks</h1>
+    </header>
+    <section>
+        <h3>Posted 10/5/25 by Noah Konarz</h3>
+    </section>
+    <section>
+        <p>Most of the time, when I'm playing video games, I play them on on my PC. I do have a Nintendo Switch 2, but I really only use that for either new Nintendo releases or party games, so most of my hours are logged on Steam. Steam shows how much
+            you've played certain games, so I figured I would write on what I've been playing for the past two weeks. Below I've included a table of the top 3 games I've been playing and how many hours I've logged, and then I'll go into a bit more detail.
+        </p>
+    </section>
+    <section>
+        <table>
+            <caption>Games Logged on Steam in the Past Two Weeks</caption>
+            <thead>
+                <tr>
+                    <th scope="col">Game</th>
+                    <th scope="col">Hours (Past Two Weeks)</th>
+                    <th scope="col">Hours (Total)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Hades II</th>
+                    <td>28.2</td>
+                    <td>45.2</td>
+                </tr>
+                <tr>
+                    <th scope="row">Pictopix</th>
+                    <td>12.9</td>
+                    <td>15.9</td>
+                </tr>
+                <tr>
+                    <th scope="row">Sonic Racing Crossworlds</th>
+                    <td>5.5</td>
+                    <td>15.9</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+</body>
+<body>
+    <header id="noah" class="cool">
+        <h1>A Monday in the Life of Noah Konarz</h1>
+    </header>
+    <section>
+        <h3>Posted 9/23/25 by Noah Konarz</h3> 
+    </section>
     <section>
         <h2>Morning</h2>
         <p>My Monday begins by waking up to my alarm at <strong>10 am</strong>. I usually snooze it for about 10 minutes before waking up and getting ready by brushing my teeth, washing my face, getting dressed, etc. By <strong>10:30</strong>, I am waiting for my apartment's shuttle to come and bring me to campus, where I then head to my job at the Library's <a href="https://lib.msu.edu/dmc">Digital Multimedia Center</a> until <strong>2 pm</strong>.</p>
