Added images to index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <header>
         <h1>Noah Konarz</h1>
-        <a href="index.html">Blog</a> <a href="about.html">About</a>  <a href="contact.html">Contact</a> 
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a> </li>
+            </ul>
+        </nav>
     </header>
 </body>
 <body>
@@ -51,6 +57,39 @@
                 </tr>
             </tbody>
         </table>
+    </section>
+    <section>
+        <h2>Hades II</h2>
+        <p>
+            Hades II just officially came out a week or two ago and I've been pretty addicted. The game was out in early access and I played it for a bit when it launched in early access (hence the extra hours even though the game came out within a two 
+            week span), but it's pretty much been the main thing I've been playing the past two weeks. I also own it on Switch because it has cross-saves, so when I went home for the weekend I logged a few hours on Switch that aren't represented here.
+            Overall playing it has been a blast so far, there's a reason the first game was so critically acclaimed and this game largely does everything better. 
+        </p>
+        <img src="hades2header.jpg"/>
+    </section>
+    <section>
+        <h2>Pictopix</h2>
+        <p>
+            This game is basically just a <a href="https://en.wikipedia.org/wiki/Nonogram">nonogram</a> collection on Steam. The puzzles scale in a way that it actually teaches you how to play it, and I've been playing it in my spare time when I don't have
+            enough time to play a full game or need to be paying half attention to something else. Each puzzle usually only takes around 10 minutes for the more complicated ones, and the simple ones can be done as quick as 15 seconds if you know what you're
+            doing. It's a pretty fun game, it's pretty much just a typical nonogram game but it's nice to have it on Steam.
+        </p>
+        <img src="pictopixheader.jpg"/>
+    </section>
+    <section>
+        <h2>Sonic Racing Crossworlds</h2>
+        <p>
+            Sonic Racing Crossworlds also came out pretty recently, like Hades 2. Most of my time has been on the previous two games but I've still put a few hours into Crossworlds. I grew up on Mario Kart Wii and pretty much any racing game I've ever
+            played has been a Mario Kart game (with the exception of a few hours of Forza), and playing a Sonic Racing game has been a pretty different experience. Honestly, the game is actually pretty fun, moreso than I thought it would be. A lot of people
+            were debating whether this was going to be the better game compared to Mario Kart World, and I think this game does have a few pluses over MKW, though I think they each serve a different purpose and I'm not sure one replaces the other.
+        </p>
+        <img src="sonicracingheader.jpg">
+    </section>
+    <section>
+        <p>
+            Anyway, that's what I've been up to in the gaming department the last couple of weeks. I've played a much larger variety of games to varying degrees but as previously stated, I've been dumping a ton of time into Hades II so it definitely takes
+            the cake for the past two weeks. 
+        </p>
     </section>
 </body>
 <body>
