--- a/about.html
+++ b/about.html
@@ -8,9 +8,41 @@
 <body>
     <header>
         <h1>Noah Konarz</h1>
-        <a href="index.html">Blog</a> <a href="about.html">About</a>  <a href="contact.html">Contact</a> 
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a> </li>
+            </ul>
+        </nav>
     </header>
 </body>
 <body>
-    
+    <header>
+        <h1>About Me</h1>
+    </header>
+    <section>
+        <p>
+            Hi! I'm Noah, a junior student at Michigan State University with an Interactive Games and Media major and a minor in Game Design and Development. I am currently taking MI 349, which is Web Design and Development, and this is a website that
+            I created as a project for this class.
+        </p>
+    </section>
+    <section>
+        <p>
+            One of my main hobbies is playing all kinds of video games. Obviously I like video games as they're my field of study, but I enjoy a really broad variety of games and game genres, from whatever the big game is right now to smaller indie games that
+            get little recognition. Some of my favorite games of all time include:
+        </p>
+        <ul>
+            <li>Terraria</li>
+            <li>Plants vs. Zombies</li>
+            <li>The Yakuza Series</li>
+            <li>The Binding of Isaac</li>
+        </ul>
+        <p>
+            I also play a bunch of board games as well. My favorite is probably Blood on the Clocktower, and I usually play board games with my friends on campus through MSU Tabletop Club.
+        </p>
+    </section>
+    <section>
+        <img src="noahnicepicicon.png">
+    </section>  
 </body>
