--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <section>
         <h2>Morning</h2>
         <p>My Monday begins by waking up to my alarm at <strong>10 am</strong>. I usually snooze it for about 10 minutes before waking up and getting ready by brushing my teeth, washing my face, getting dressed, etc. By <strong>10:30</strong>, I am waiting for my apartment's shuttle to come and bring me to campus, where I then head to my job at the Library's <a href="https://lib.msu.edu/dmc">Digital Multimedia Center</a> until <strong>2 pm</strong>.</p>
+        <img src="msulibrary.png">
     </section>
     <section>
         <h2>Afternoon</h2>
@@ -125,6 +126,16 @@
             <li>Bloons Tower Defense 6</li>
         </ul>
         <p>We usually play for a couple of hours, after which I head to bed, thus ending my Monday.</p>
+    </section>
+    <section>
+        <h3>Sign up for my newsletter below!</h3>
+        <form>
+            <label>
+                Email:
+                <input type="text">
+            </label>
+            <button>Subscribe</button>
+        </form>
     </section>
 </body>
 </html>
