--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,40 @@
 <body>
     <header>
         <h1>Noah Konarz</h1>
-        <a href="index.html">Blog</a> <a href="about.html">About</a>  <a href="contact.html">Contact</a> 
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a> </li>
+            </ul>
+        </nav>
     </header>
+</body>
+<body>
+    <header>
+        <h1>Contact</h1>
+    </header>
+    <section>
+        <h3>You can reach me through the following contact form:</h3>
+        <form>
+            <p>
+                <label>Name:<input type="text"></label>
+            </p>
+            <p>
+                <label>Email:<input type="text"></label>
+            </p>
+            <p>
+                <label>Reason for Contact:</label>
+                <select>
+                    <option value="hi">Saying Hi</option>
+                    <option value="contractor">Looking for a Contractor</option>
+                    <option value="interview">Interested in an Interview</option>
+            </select>
+            </p>
+            <p>
+                <label>Comment:<textarea></textarea></label>
+            </p>
+            <button>Submit</button>
+        </form>
+    </section>
 </body>
