--- a/about.html
+++ b/about.html
@@ -16,8 +16,6 @@
             </ul>
         </nav>
     </header>
-</body>
-<body>
     <header>
         <h1>About Me</h1>
     </header>
@@ -43,6 +41,6 @@
         </p>
     </section>
     <section>
-        <img src="noahnicepicicon.png">
+        <img src="noahnicepicicon.png" alt="Picture of Noah">
     </section>  
 </body>
