--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
             </ul>
         </nav>
     </header>
-</body>
-<body>
     <header>
         <h1>My Steam Gaming in the last Two Weeks</h1>
     </header>
@@ -65,7 +63,7 @@
             week span), but it's pretty much been the main thing I've been playing the past two weeks. I also own it on Switch because it has cross-saves, so when I went home for the weekend I logged a few hours on Switch that aren't represented here.
             Overall playing it has been a blast so far, there's a reason the first game was so critically acclaimed and this game largely does everything better. 
         </p>
-        <img src="hades2header.jpg"/>
+        <img src="hades2header.jpg" alt="Hades II">
     </section>
     <section>
         <h2>Pictopix</h2>
@@ -74,7 +72,7 @@
             enough time to play a full game or need to be paying half attention to something else. Each puzzle usually only takes around 10 minutes for the more complicated ones, and the simple ones can be done as quick as 15 seconds if you know what you're
             doing. It's a pretty fun game, it's pretty much just a typical nonogram game but it's nice to have it on Steam.
         </p>
-        <img src="pictopixheader.jpg"/>
+        <img src="pictopixheader.jpg" alt="Pictopix">
     </section>
     <section>
         <h2>Sonic Racing Crossworlds</h2>
@@ -83,7 +81,7 @@
             played has been a Mario Kart game (with the exception of a few hours of Forza), and playing a Sonic Racing game has been a pretty different experience. Honestly, the game is actually pretty fun, moreso than I thought it would be. A lot of people
             were debating whether this was going to be the better game compared to Mario Kart World, and I think this game does have a few pluses over MKW, though I think they each serve a different purpose and I'm not sure one replaces the other.
         </p>
-        <img src="sonicracingheader.jpg">
+        <img src="sonicracingheader.jpg" alt="Sonic Racing Crossworlds">
     </section>
     <section>
         <p>
@@ -91,8 +89,6 @@
             the cake for the past two weeks. 
         </p>
     </section>
-</body>
-<body>
     <header id="noah" class="cool">
         <h1>A Monday in the Life of Noah Konarz</h1>
     </header>
@@ -102,7 +98,7 @@
     <section>
         <h2>Morning</h2>
         <p>My Monday begins by waking up to my alarm at <strong>10 am</strong>. I usually snooze it for about 10 minutes before waking up and getting ready by brushing my teeth, washing my face, getting dressed, etc. By <strong>10:30</strong>, I am waiting for my apartment's shuttle to come and bring me to campus, where I then head to my job at the Library's <a href="https://lib.msu.edu/dmc">Digital Multimedia Center</a> until <strong>2 pm</strong>.</p>
-        <img src="msulibrary.png">
+        <img src="msulibrary.png" alt="MSU Library">
     </section>
     <section>
         <h2>Afternoon</h2>
