minor form changes

--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
             <p>
                 <label>Reason for Contact:</label>
                 <select name="reason">
-                    <option value="hi">Saying Hi</option>
-                    <option value="contractor">Looking for a Contractor</option>
-                    <option value="interview">Interested in an Interview</option>
+                    <option value="Hi">Saying Hi</option>
+                    <option value="Contractor">Looking for a Contractor</option>
+                    <option value="Interview">Interested in an Interview</option>
             </select>
             </p>
             <p>
