--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
     </section>
     <section>
         <h3>Sign up for my newsletter below!</h3>
-        <form>
+        <form name="newsletter" method="POST" data-netlify="true">
             <label>
                 Email:
-                <input type="text">
+                <input type="text" name="email">
             </label>
-            <button>Subscribe</button>
+            <button type="submit">Subscribe</button>
         </form>
     </section>
 </body>
