--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.1">
     <title>Noah Konarz Contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
