--- a/about.html
+++ b/about.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Noah Konarz</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a> </li>
-            </ul>
-        </nav>
-    </header>
+    <section class="navigation"></section>
+        <header>
+            <h1>Noah Konarz</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a> </li>
+                </ul>
+            </nav>
+        </header>
+    </section>
     <header>
         <h1>About Me</h1>
     </header>
