--- a/index.html
+++ b/index.html
@@ -7,124 +7,120 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Noah Konarz</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a> </li>
-            </ul>
-        </nav>
-    </header>
-    <header>
-        <h1>My Steam Gaming in the last Two Weeks</h1>
-    </header>
-    <section>
-        <h3>Posted 10/5/25 by Noah Konarz</h3>
+    <section class="navigation">
+        <header>
+            <h1>Noah Konarz</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a> </li>
+                </ul>
+            </nav>
+        </header>
     </section>
-    <section>
-        <p>Most of the time, when I'm playing video games, I play them on on my PC. I do have a Nintendo Switch 2, but I really only use that for either new Nintendo releases or party games, so most of my hours are logged on Steam. Steam shows how much
-            you've played certain games, so I figured I would write on what I've been playing for the past two weeks. Below I've included a table of the top 3 games I've been playing and how many hours I've logged, and then I'll go into a bit more detail.
-        </p>
-    </section>
-    <section>
-        <table>
-            <caption>Games Logged on Steam in the Past Two Weeks</caption>
-            <thead>
-                <tr>
-                    <th scope="col">Game</th>
-                    <th scope="col">Hours (Past Two Weeks)</th>
-                    <th scope="col">Hours (Total)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">Hades II</th>
-                    <td>28.2</td>
-                    <td>45.2</td>
-                </tr>
-                <tr>
-                    <th scope="row">Pictopix</th>
-                    <td>12.9</td>
-                    <td>15.9</td>
-                </tr>
-                <tr>
-                    <th scope="row">Sonic Racing Crossworlds</th>
-                    <td>5.5</td>
-                    <td>15.9</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
-    <section>
-        <h2>Hades II</h2>
-        <p>
-            Hades II just officially came out a week or two ago and I've been pretty addicted. The game was out in early access and I played it for a bit when it launched in early access (hence the extra hours even though the game came out within a two 
-            week span), but it's pretty much been the main thing I've been playing the past two weeks. I also own it on Switch because it has cross-saves, so when I went home for the weekend I logged a few hours on Switch that aren't represented here.
-            Overall playing it has been a blast so far, there's a reason the first game was so critically acclaimed and this game largely does everything better. 
-        </p>
-        <img src="hades2header.jpg" alt="Hades II">
-    </section>
-    <section>
-        <h2>Pictopix</h2>
-        <p>
-            This game is basically just a <a href="https://en.wikipedia.org/wiki/Nonogram">nonogram</a> collection on Steam. The puzzles scale in a way that it actually teaches you how to play it, and I've been playing it in my spare time when I don't have
-            enough time to play a full game or need to be paying half attention to something else. Each puzzle usually only takes around 10 minutes for the more complicated ones, and the simple ones can be done as quick as 15 seconds if you know what you're
-            doing. It's a pretty fun game, it's pretty much just a typical nonogram game but it's nice to have it on Steam.
-        </p>
-        <img src="pictopixheader.jpg" alt="Pictopix">
-    </section>
-    <section>
-        <h2>Sonic Racing Crossworlds</h2>
-        <p>
-            Sonic Racing Crossworlds also came out pretty recently, like Hades 2. Most of my time has been on the previous two games but I've still put a few hours into Crossworlds. I grew up on Mario Kart Wii and pretty much any racing game I've ever
-            played has been a Mario Kart game (with the exception of a few hours of Forza), and playing a Sonic Racing game has been a pretty different experience. Honestly, the game is actually pretty fun, moreso than I thought it would be. A lot of people
-            were debating whether this was going to be the better game compared to Mario Kart World, and I think this game does have a few pluses over MKW, though I think they each serve a different purpose and I'm not sure one replaces the other.
-        </p>
-        <img src="sonicracingheader.jpg" alt="Sonic Racing Crossworlds">
-    </section>
-    <section>
-        <p>
-            Anyway, that's what I've been up to in the gaming department the last couple of weeks. I've played a much larger variety of games to varying degrees but as previously stated, I've been dumping a ton of time into Hades II so it definitely takes
-            the cake for the past two weeks. 
-        </p>
-    </section>
-    <header id="noah" class="cool">
-        <h1>A Monday in the Life of Noah Konarz</h1>
-    </header>
-    <section>
-        <h3>Posted 9/23/25 by Noah Konarz</h3> 
-    </section>
-    <section>
-        <h2>Morning</h2>
-        <p>My Monday begins by waking up to my alarm at <strong>10 am</strong>. I usually snooze it for about 10 minutes before waking up and getting ready by brushing my teeth, washing my face, getting dressed, etc. By <strong>10:30</strong>, I am waiting for my apartment's shuttle to come and bring me to campus, where I then head to my job at the Library's <a href="https://lib.msu.edu/dmc">Digital Multimedia Center</a> until <strong>2 pm</strong>.</p>
-        <img src="msulibrary.png" alt="MSU Library">
-    </section>
-    <section>
-        <h2>Afternoon</h2>
-        <p>After finishing my shift at the library, I go to the International Center to grab lunch. The lines can be pretty long but generally I will either:</p>
-        <ol>
-            <li>Get Panda Express</li>
-            <li>Get Woody's, if the Panda line is too long.</li>
-        </ol>
-        <p>After finishing lunch I'll head to my <strong>3 pm</strong> Level Design class, which lasts until <strong>5 pm.</strong>
-    </section>
-    <section>
-        <h2>Evening</h2>
-        <p>Post class I usually head back to the library to study/hangout with some friends at the library for a few hours until <em>Weezer Club</em> at <strong>8 pm</strong>, which generally is around two hours long.</p>
-    </section>
-    <section>
-        <h2>Night</h2>
-        <p>After <em>Weezer Club</em>, I usually grab a later dinner with my friends from the club and head home. When I get home, I take a shower and then hop online with some friends and we play video games. Some of the games we play include:</p>
-        <ul>
-            <li>Marvel Rivals</li>
-            <li>2XKO</li>
-            <li>Bloons Tower Defense 6</li>
-        </ul>
-        <p>We usually play for a couple of hours, after which I head to bed, thus ending my Monday.</p>
-    </section>
-    <section>
+    <section class="blog">
+        <article class="steam">
+            <header>
+                <h1>My Steam Gaming in the last Two Weeks</h1>
+            </header>
+            <p>Most of the time, when I'm playing video games, I play them on on my PC. I do have a Nintendo Switch 2, but I really only use that for either new Nintendo releases or party games, so most of my hours are logged on Steam. Steam shows how much
+                you've played certain games, so I figured I would write on what I've been playing for the past two weeks. Below I've included a table of the top 3 games I've been playing and how many hours I've logged, and then I'll go into a bit more detail.
+            </p>
+            <table>
+                <caption>Games Logged on Steam in the Past Two Weeks</caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Game</th>
+                        <th scope="col">Hours (Past Two Weeks)</th>
+                        <th scope="col">Hours (Total)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Hades II</th>
+                        <td>28.2</td>
+                        <td>45.2</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Pictopix</th>
+                        <td>12.9</td>
+                        <td>15.9</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Sonic Racing Crossworlds</th>
+                        <td>5.5</td>
+                        <td>15.9</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="game">
+                <h2>Hades II</h2>
+                <p>
+                    Hades II just officially came out a week or two ago and I've been pretty addicted. The game was out in early access and I played it for a bit when it launched in early access (hence the extra hours even though the game came out within a two 
+                    week span), but it's pretty much been the main thing I've been playing the past two weeks. I also own it on Switch because it has cross-saves, so when I went home for the weekend I logged a few hours on Switch that aren't represented here.
+                    Overall playing it has been a blast so far, there's a reason the first game was so critically acclaimed and this game largely does everything better. 
+                </p>
+                <img src="hades2header.jpg" alt="Hades II">
+            </div>
+            <div class="game">
+                <h2>Pictopix</h2>
+                <p>
+                    This game is basically just a <a href="https://en.wikipedia.org/wiki/Nonogram">nonogram</a> collection on Steam. The puzzles scale in a way that it actually teaches you how to play it, and I've been playing it in my spare time when I don't have
+                    enough time to play a full game or need to be paying half attention to something else. Each puzzle usually only takes around 10 minutes for the more complicated ones, and the simple ones can be done as quick as 15 seconds if you know what you're
+                    doing. It's a pretty fun game, it's pretty much just a typical nonogram game but it's nice to have it on Steam.
+                </p>
+                <img src="pictopixheader.jpg" alt="Pictopix">
+            </div>
+            <div class="game">
+                <h2>Sonic Racing Crossworlds</h2>
+                <p>
+                    Sonic Racing Crossworlds also came out pretty recently, like Hades 2. Most of my time has been on the previous two games but I've still put a few hours into Crossworlds. I grew up on Mario Kart Wii and pretty much any racing game I've ever
+                    played has been a Mario Kart game (with the exception of a few hours of Forza), and playing a Sonic Racing game has been a pretty different experience. Honestly, the game is actually pretty fun, moreso than I thought it would be. A lot of people
+                    were debating whether this was going to be the better game compared to Mario Kart World, and I think this game does have a few pluses over MKW, though I think they each serve a different purpose and I'm not sure one replaces the other.
+                </p>
+                <img src="sonicracingheader.jpg" alt="Sonic Racing Crossworlds">
+            </div>
+            <p>
+                Anyway, that's what I've been up to in the gaming department the last couple of weeks. I've played a much larger variety of games to varying degrees but as previously stated, I've been dumping a ton of time into Hades II so it definitely takes
+                the cake for the past two weeks. 
+            </p>
+        </article>
+        <article class="monday">
+            <header id="noah" class="cool">
+                <h1>A Monday in the Life of Noah Konarz</h1>
+            </header>
+            <h3>Posted 9/23/25 by Noah Konarz</h3> 
+            <div>
+                <h2>Morning</h2>
+                <p>My Monday begins by waking up to my alarm at <strong>10 am</strong>. I usually snooze it for about 10 minutes before waking up and getting ready by brushing my teeth, washing my face, getting dressed, etc. By <strong>10:30</strong>, I am waiting for my apartment's shuttle to come and bring me to campus, where I then head to my job at the Library's <a href="https://lib.msu.edu/dmc">Digital Multimedia Center</a> until <strong>2 pm</strong>.</p>
+                <img src="msulibrary.png" alt="MSU Library">
+            </div>
+            <div>
+                <h2>Afternoon</h2>
+                <p>After finishing my shift at the library, I go to the International Center to grab lunch. The lines can be pretty long but generally I will either:</p>
+                <ol>
+                    <li>Get Panda Express</li>
+                    <li>Get Woody's, if the Panda line is too long.</li>
+                </ol>
+                <p>After finishing lunch I'll head to my <strong>3 pm</strong> Level Design class, which lasts until <strong>5 pm.</strong>
+            </div>
+            <div>
+                <h2>Evening</h2>
+                <p>Post class I usually head back to the library to study/hangout with some friends at the library for a few hours until <em>Weezer Club</em> at <strong>8 pm</strong>, which generally is around two hours long.</p>
+            </div>
+            <div>
+                <h2>Night</h2>
+                <p>After <em>Weezer Club</em>, I usually grab a later dinner with my friends from the club and head home. When I get home, I take a shower and then hop online with some friends and we play video games. Some of the games we play include:</p>
+                <ul>
+                    <li>Marvel Rivals</li>
+                    <li>2XKO</li>
+                    <li>Bloons Tower Defense 6</li>
+                </ul>
+                <p>We usually play for a couple of hours, after which I head to bed, thus ending my Monday.</p>
+            </div>
+        </article>
+    <section class="newsletter">
         <h3>Sign up for my newsletter below!</h3>
         <form name="newsletter" method="POST" data-netlify="true">
             <label>
